add prev/next page event on both sides of viewer

--- a/index.html
+++ b/index.html
@@ -363,6 +363,11 @@ http://sourceforge.net/adobe/cmap/wiki/License/
           <div id="viewer" class="pdfViewer"></div>
         </div>
 
+        <div id="prevcontainer" tabindex="0">
+        </div>
+        <div id="nextcontainer" tabindex="0">
+        </div>
+
         <div id="errorWrapper" hidden='true'>
           <div id="errorMessageLeft">
             <span id="errorMessage"></span>
