--- a/index.html
+++ b/index.html
@@ -173,12 +173,14 @@ http://sourceforge.net/adobe/cmap/wiki/License/
 
             <div class="horizontalToolbarSeparator visibleLargeView"></div>
 
-            <button id="firstPage" class="secondaryToolbarButton firstPage" title="Go to First Page" tabindex="56" data-l10n-id="first_page">
+<!--
+            <button name="firstPage" id="firstPage" class="secondaryToolbarButton firstPage" title="Go to First Page" tabindex="56" data-l10n-id="first_page">
               <span data-l10n-id="first_page_label">Go to First Page</span>
             </button>
             <button id="lastPage" class="secondaryToolbarButton lastPage" title="Go to Last Page" tabindex="57" data-l10n-id="last_page">
               <span data-l10n-id="last_page_label">Go to Last Page</span>
             </button>
+-->
 
             <div class="horizontalToolbarSeparator"></div>
 
@@ -219,6 +221,9 @@ http://sourceforge.net/adobe/cmap/wiki/License/
                    <span data-l10n-id="findbar_label">Find</span>
                 </button>
 
+<!-- first -->
+            <button name="firstPage" id="firstPage" class="toolbarButton firstPage" title="Go to First Page" tabindex="56" data-l10n-id="first_page">
+            </button>
 
                 <div class="splitToolbarButton">
                   <button class="toolbarButton pageUp" title="Previous Page" id="previous" tabindex="13" data-l10n-id="previous">
@@ -229,7 +234,14 @@ http://sourceforge.net/adobe/cmap/wiki/License/
                     <span data-l10n-id="next_label">Next</span>
                   </button>
                 </div>
+
+            <button id="lastPage" class="toolbarButton lastPage" title="Go to Last Page" tabindex="57" data-l10n-id="last_page">
+            </button>
+
+
+<!--
                 <label id="pageNumberLabel" class="toolbarLabel" for="pageNumber" data-l10n-id="page_label">Page: </label>
+-->
                 <input type="number" id="pageNumber" class="toolbarField pageNumber" value="1" size="4" min="1" tabindex="15">
                 <span id="numPages" class="toolbarLabel"></span>
 
