add about button on menu

--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@ http://sourceforge.net/adobe/cmap/wiki/License/
             <button id="documentProperties" class="secondaryToolbarButton documentProperties" title="Document Properties…" tabindex="61" data-l10n-id="document_properties">
               <span data-l10n-id="document_properties_label">Document Properties…</span>
             </button>
+
+            <button id="menuabout" class="secondaryToolbarButton menuabout" title="About" tabindex="62" data-l10n-id="about" onclick="parent.location='http://whitebase.org/jupdf'" formtarget="_blank">
+              About
+            </button>
+
           </div>
         </div>  <!-- secondaryToolbar -->
 
@@ -222,7 +227,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
                 </button>
 
 <!-- first -->
-            <button name="firstPage" id="firstPage" class="toolbarButton firstPage hiddenLargeView" title="Go to First Page" tabindex="56" data-l10n-id="first_page">
+            <button name="firstPage" id="firstPage" class="toolbarButton firstPage hiddenSmallView" title="Go to First Page" tabindex="56" data-l10n-id="first_page">
             </button>
 
                 <div class="splitToolbarButton">
@@ -235,7 +240,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
                   </button>
                 </div>
 
-            <button id="lastPage" class="toolbarButton lastPage hiddenLargeView" title="Go to Last Page" tabindex="57" data-l10n-id="last_page">
+            <button id="lastPage" class="toolbarButton lastPage hiddenSmallView" title="Go to Last Page" tabindex="57" data-l10n-id="last_page">
             </button>
 
 
@@ -276,7 +281,7 @@ http://sourceforge.net/adobe/cmap/wiki/License/
 
 
               <div id="toolbarViewerRight">
-                <button class="toolbarButton aboutlogo hiddenLargeView" title="about" tabindex="31" data-l10n-id="about" onclick="parent.location='http://whitebase.org/jupdf'" formtarget="_blank">
+                <button class="toolbarButton aboutlogo" title="about" tabindex="31" data-l10n-id="about" onclick="parent.location='http://whitebase.org/jupdf'" formtarget="_blank">
                   <span data-l10n-id="about">about</span>
                 </button>
 
